--- a/index.html
+++ b/index.html
@@ -612,23 +612,34 @@
 						<span class="lf-feature-source">Crunchyroll News</span>						
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll-Spring-2023.png"></img>
 					</a>					
-					<a class="lf-feature-link" href="https://kitsu.io/posts/9739332">
-						<h3 class="lf-feature-title">Welcome to the 2022 Kitsu Anime Awards</h3>
-						<span class="lf-feature-source">Kitsu Events</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/kitsu-awards.png"></img>
-					</a>					
-					<a class="lf-feature-link" href="https://animeawards.moe/">
-						<h3 class="lf-feature-title">r/Anime Awards 2022</h3>
-						<span class="lf-feature-source">r/Anime</span>						
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/r-anime_awards.png"></img>
-					</a>
+					<a class="lf-feature-link" href="https://www.animenewsnetwork.com/news/2023-03-25/new-horimiya-piece-anime-premieres-in-july/.196395">
+						<h3 class="lf-feature-title">New Horimiya -piece- Anime Premieres in July</h3>
+						<span class="lf-feature-source">Anime News Network</span>						
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Horimiya-Returns.jfif"></img>
+					</a>							
+					<a class="lf-feature-link" href="https://www.animenewsnetwork.com/news/2023-03-25/re-zero-anime-gets-3rd-season/.196399">
+						<h3 class="lf-feature-title">Re:Zero Anime Gets 3rd Season</h3>
+						<span class="lf-feature-source">Anime News Network</span>						
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/ReZERO-season-3.jfif"></img>
+					</a>							
+
 
 					<!-- Previous Stories
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/animeawards/index.html">
-						<h3 class="lf-feature-title">Crunchyroll Anime Awards</h3>
-						<span class="lf-feature-source">Crunchyroll</span>						
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/crunchyroll_anime_awards.png"></img>
-					</a>				
+						<a class="lf-feature-link" href="https://kitsu.io/posts/9739332">
+							<h3 class="lf-feature-title">Welcome to the 2022 Kitsu Anime Awards</h3>
+							<span class="lf-feature-source">Kitsu Events</span>
+							<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/kitsu-awards.png"></img>
+						</a>					
+						<a class="lf-feature-link" href="https://animeawards.moe/">
+							<h3 class="lf-feature-title">r/Anime Awards 2022</h3>
+							<span class="lf-feature-source">r/Anime</span>						
+							<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/r-anime_awards.png"></img>
+						</a>
+						<a class="lf-feature-link" href="https://www.crunchyroll.com/animeawards/index.html">
+							<h3 class="lf-feature-title">Crunchyroll Anime Awards</h3>
+							<span class="lf-feature-source">Crunchyroll</span>						
+							<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/crunchyroll_anime_awards.png"></img>
+						</a>				
 					-->
 				</div>										
 
