--- a/Artists.html
+++ b/Artists.html
@@ -30,7 +30,11 @@
             </div>
             -->
             <div id="main_container">
-
+                <div class="artist-container">
+                    <div class="image-grid">
+                        
+                    </div>
+                </div>
             </div>
             <!--
             <div id="sidebar_container">
