--- a/index.html
+++ b/index.html
@@ -798,11 +798,11 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://www.hidive.com/news/2023/3/29/discover-hidives-spring-2023-anime-simulcast-lineup-today?utm_source=Sentai+Filmworks&utm_campaign=cdcfa6f1cc-EMAIL_03_31_23_SPRING_SIMULCAST_SEASON&utm_medium=email&utm_term=0_28cd02d48a-cdcfa6f1cc-433482433&goal=0_28cd02d48a-cdcfa6f1cc-433482433&mc_cid=cdcfa6f1cc&mc_eid=8d82149c59">
+					<a class="lf-link" href="https://www.hidive.com/news/2023/7/20/get-ready-for-an-epic-summer-hidives-2023-anime-simulcasts-are-here">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/hidive-spring-2023-anime-simulcasts.png"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/hidive-summer-2023-simulcasts.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">HIDIVE Spring 2023</span>
+								<span class="lf-displayname">HIDIVE Summer 2023</span>
 								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> hidive.com</span>
 							</div>
 						</div>
@@ -868,6 +868,24 @@
 							</div>
 						</div>
 					</a>			
+					<a class="lf-link" href="https://twitter.com/WTK">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-WTK.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Media & Licensing Updates</span>
+								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @WTK</span>
+							</div>
+						</div>
+					</a>													
+					<a class="lf-link" href="https://www.reddit.com/r/AnimeCollectors/">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/r-AnimeCollectors-icon.png"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">r/AnimeCollectors</span>
+								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/AnimeCollectors</span>
+							</div>
+						</div>
+					</a>					
 					<a class="lf-link" href="https://www.reddit.com/r/AnimeDeals/new/">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/animedeals-icon.png"></img>
@@ -877,24 +895,51 @@
 							</div>
 						</div>
 					</a>			
-					<a class="lf-link" href="https://www.reddit.com/r/AnimeCollectors/">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/reddit-icon.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">r/AnimeCollectors</span>
-								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/AnimeCollectors</span>
-							</div>
-						</div>
-					</a>
 					<a class="lf-link" href="https://www.reddit.com/r/animeicons/">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/r-animeicons-icon.png"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">r/animeicons</span>
-								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /rr/animeicons</span>
+								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/animeicons</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link" href="https://www.reddit.com/r/AnimeCollectors/comments/10jfbou/comment/j5l6lmw/?utm_source=share&utm_medium=web2x&context=3">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/reddit-icon.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Licensing OOP Article</span>
+								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /u/the_viral_infection</span>
 							</div>
 						</div>
 					</a>					
+					<a class="lf-link" href="https://www.rightstufanime.com/category/Blu~ray/live-action/false/spoken-language/English?order=custitem_rs_release_date:desc">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/rightstufanime-icon.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Rightstufanime <i class="fa-solid fa-filter"></i>Recent</span>
+								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> rightstufanime.com</span>
+							</div>
+						</div>
+					</a>					
+					<a class="lf-link" href="https://www.rightstufanime.com/category/Blu~ray/clearance/0.50to0.99/live-action/false/spoken-language/English">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/rightstufanime-icon.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Rightstufanime <i class="fa-solid fa-filter"></i>Clearance</span>
+								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> rightstufanime.com</span>
+							</div>
+						</div>
+					</a>					
+					<a class="lf-link" href="https://www.rightstufanime.com/category/Blu~ray/last-chance-items/true/live-action/false/spoken-language/English">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/rightstufanime-icon.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Rightstufanime <i class="fa-solid fa-filter"></i>Last Chance</span>
+								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> rightstufanime.com</span>
+							</div>
+						</div>
+					</a>										
 				</div>
 				<div class="lf-list">
 					<h3 class="lf-heading">Anitube</h3>				
