Implemented show more for collections
Implemented show more for collections button to show more links in For Collections. Updated main page, stylesheet, and main functions javascript.

--- a/index.html
+++ b/index.html
@@ -904,7 +904,10 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://www.reddit.com/r/AnimeCollectors/comments/10jfbou/comment/j5l6lmw/?utm_source=share&utm_medium=web2x&context=3">
+
+					<button onclick="more_forcollections_btn()" id="more_forcollections_btn" class="more-lf-link-btn">Show more</button>
+
+					<a class="lf-link more-lf-forcollections" href="https://www.reddit.com/r/AnimeCollectors/comments/10jfbou/comment/j5l6lmw/?utm_source=share&utm_medium=web2x&context=3">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/reddit-icon.jpg"></img>
 							<div class="lf-text">
@@ -913,7 +916,7 @@
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link" href="https://www.rightstufanime.com/category/Blu~ray/live-action/false/spoken-language/English?order=custitem_rs_release_date:desc">
+					<a class="lf-link more-lf-forcollections" href="https://www.rightstufanime.com/category/Blu~ray/live-action/false/spoken-language/English?order=custitem_rs_release_date:desc">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/rightstufanime-icon.jpg"></img>
 							<div class="lf-text">
@@ -922,7 +925,7 @@
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link" href="https://www.rightstufanime.com/category/Blu~ray/clearance/0.50to0.99/live-action/false/spoken-language/English">
+					<a class="lf-link more-lf-forcollections" href="https://www.rightstufanime.com/category/Blu~ray/clearance/0.50to0.99/live-action/false/spoken-language/English">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/rightstufanime-icon.jpg"></img>
 							<div class="lf-text">
@@ -931,7 +934,7 @@
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link" href="https://www.rightstufanime.com/category/Blu~ray/last-chance-items/true/live-action/false/spoken-language/English">
+					<a class="lf-link more-lf-forcollections" href="https://www.rightstufanime.com/category/Blu~ray/last-chance-items/true/live-action/false/spoken-language/English">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/rightstufanime-icon.jpg"></img>
 							<div class="lf-text">
