--- a/index.html
+++ b/index.html
@@ -138,46 +138,32 @@
 							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/vinland-saga-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/44875/poster_image/large-c91906d83db833c1dad74f7ced0ada7b.jpeg" alt="Vinland Saga Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/ousama-ranking-yuuki-no-takarabako"><img class="tile-image" src="https://media.kitsu.io/anime/46317/poster_image/large-4604d11f71b9652e9f39ef679a3484a5.jpeg" alt="Ranking of Kings: Treasure Chest of Courage"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/otonari-ni-ginga"><img class="tile-image" src="https://media.kitsu.io/anime/46083/poster_image/large-b5c818906e89658aa2e26a7251a013e1.jpeg" alt="The Galaxy Next Door"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/ousama-ranking-yuuki-no-takarabako"><img class="tile-image" src="https://media.kitsu.io/anime/46317/poster_image/large-4604d11f71b9652e9f39ef679a3484a5.jpeg" alt="Ranking of Kings: Treasure Chest of Courage"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/my-home-hero"><img class="tile-image" src="https://media.kitsu.io/anime/46209/poster_image/large-e6ed88832d387593e867b7bd44091c81.jpeg" alt="My Home Hero"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tengoku-daimakyou"><img class="tile-image" src="https://media.kitsu.io/anime/46641/poster_image/large-a26b99328f29c31db60ba7201ebeb446.jpeg" alt="Heavenly Delusion"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/oshi-no-ko"><img class="tile-image" src="https://media.kitsu.io/anime/46170/poster_image/large-0bad1050afcf9e5320ca46bf17ac007a.jpeg" alt="OSHI NO KO"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/isekai-wa-smartphone-to-tomo-ni-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46057/poster_image/large-53012f56d869648d430fe1e22fbbfd06.jpeg" alt="In Another World With My Smartphone Season 2"></img></a>													
-							<a class="tile" href="https://kitsu.io/anime/dead-mount-death-play"><img class="tile-image" src="https://media.kitsu.io/anime/46760/poster_image/large-fd7395ab37750b2990447dc7481c3177.jpeg" alt="Dead Mount Death Play"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/isekai-de-cheat-skill-wo-te-ni-shita-ore-wa-genjitsu-sekai-wo-mo-musou-suru-level-up-wa-jinsei-wo-kaeta"><img class="tile-image" src="https://media.kitsu.io/anime/46370/poster_image/large-338a164d72dacaa07fc4b6ea58fa1efc.jpeg" alt="I Got a Cheat Ability"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kimetsu-no-yaiba-katanakaji-no-satohen"><img class="tile-image" src="https://media.kitsu.io/anime/45866/poster_image/large-dac43ca9e91691e1c8bbff99f45b73dd.jpeg" alt="Demon Slayer Village Arc"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/oshi-no-ko"><img class="tile-image" src="https://media.kitsu.io/anime/46170/poster_image/large-0bad1050afcf9e5320ca46bf17ac007a.jpeg" alt="OSHI NO KO"></img></a>																				
 							<a class="tile" href="https://kitsu.io/anime/liar-liar"><img class="tile-image" src="https://media.kitsu.io/anime/44337/poster_image/large-63fd5a01d63deaf1bcf46310686a9f03.jpeg" alt="Liar Liar"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/sugar-apple-fairy-tale-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/47231/poster_image/large-95732c4ec596ca081b6aa4391bd97f21.jpeg" alt="Sugar Apple Fairy Tale Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/uchi-no-kaisha-no-chiisai-senpai-no-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/46647/poster_image/large-6e4c2bca546bfdf78223a42d3d579df7.jpeg" alt="My Tiny Senpai"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/watashi-no-shiawase-na-kekkon"><img class="tile-image" src="https://media.kitsu.io/anime/46050/poster_image/large-fd7b1e4ec20ffb1f45e6899de32b46a3.jpeg" alt="My Happy Marriage"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/seija-musou-salaryman-isekai-de-ikinokoru-tame-ni-ayumu-michi"><img class="tile-image" src="https://media.kitsu.io/anime/46600/poster_image/large-b754bcb251e06937006bc1a23e9d1c54.jpeg" alt="The Great Cleric"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/jitsu-wa-ore-saikyou-deshita"><img class="tile-image" src="https://media.kitsu.io/anime/46456/poster_image/large-fccd170d71e16e04e62feb58b28d93fc.jpeg" alt="Am I Actually the Strongest?"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/level-1-dakedo-unique-skill-de-saikyou-desu"><img class="tile-image" src="https://media.kitsu.io/anime/46099/poster_image/large-357c80f224c387164ecc293f72b23beb.jpeg" alt="My Unique Skill Makes Me OP even at Level 1"></img></a>							
-							
-							<!--							
-								<a class="tile" href="https://kitsu.io/anime/blue-lock"><img class="tile-image" src="https://media.kitsu.io/anime/44973/poster_image/large-ca235304c71f4233e60f6efb3967654d.jpeg" alt="Blue Lock "></img></a>
-								<a class="tile" href="https://kitsu.io/anime/tokyo-revengers-seiya-kessen-hen"><img class="tile-image" src="https://media.kitsu.io/anime/45607/poster_image/large-e0e3bb845f8d26cc42ca2bb798fbfd47.jpeg" alt="Tokyo Revengers 2"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/kami-tachi-ni-hirowareta-otoko-2"><img class="tile-image" src="https://media.kitsu.io/anime/44665/poster_image/large-d6421cf3463813ca616512dd6d599ac0.jpeg" alt="By the Grace of the Gods 2"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/trigun-stampede"><img class="tile-image" src="https://media.kitsu.io/anime/46183/poster_image/large-18f01df516283259a59ae88e549918de.jpeg" alt="Trigun Stampede"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/revenger"><img class="tile-image" src="https://media.kitsu.io/anime/46562/poster_image/large-6498b3fd3db0bba1a20d96ad40e91675.jpeg" alt="REVENGER"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/urusei-yatsura"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/1166/large.jpg" alt="Urusei Yatsura"></img></a>
-							-->							
+							<a class="tile" href="https://kitsu.io/anime/level-1-dakedo-unique-skill-de-saikyou-desu"><img class="tile-image" src="https://media.kitsu.io/anime/46099/poster_image/large-357c80f224c387164ecc293f72b23beb.jpeg" alt="My Unique Skill Makes Me OP even at Level 1"></img></a>														
+							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen-ketsubetsutan"><img class="tile-image" src="https://media.kitsu.io/anime/46903/poster_image/large-94d38b859f607cc5a9e441245f17bd1c.jpeg" alt="BLEACH: Thousand Year Blood War - The Separation"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45229/poster_image/large-a617890c5fcf3599bac9b58586bea1d5.jpeg" alt="The Duke of Death and His Maid Season 2"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/zom-100-zombie-ni-naru-made-ni-shitai-100-no-koto"><img class="tile-image" src="https://media.kitsu.io/anime/46954/poster_image/large-2adb6dcb745a6963b5377651868ba407.jpeg" alt="Zom 100: Bucket List of the Dead"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shiro-seijo-to-kuro-bokushi"><img class="tile-image" src="https://media.kitsu.io/anime/46187/poster_image/large-2b99e62dd47677270d0614a412b181b4.jpeg" alt="Saint Cecilia and Pastor Lawrence"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2 class="section-heading">Most Anticipated</h2>
 						<h3 class="section-subheading">Summer 2023</h3> 
-						<div class="tiled-list scrolling-tiled-list">								
-							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen-ketsubetsutan"><img class="tile-image" src="https://media.kitsu.io/anime/46903/poster_image/large-8e0c8a30ad962021ae4b9d0a86261777.jpeg" alt="BLEACH: Thousand Year Blood War - The Separation"></img></a>							
+						<div class="tiled-list scrolling-tiled-list">															
 							<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii-joshikou-hen"><img class="tile-image" src="https://media.kitsu.io/anime/47622/poster_image/large-bc3cfead393b3820992556007722b6e5.jpeg" alt="TONIKAWA High School Days"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-tv"><img class="tile-image" src="https://media.kitsu.io/anime/47275/poster_image/large-eb4818f7a38a5b9a6e0217e2a2a20db1.jpeg" alt="The Quintessential Quintuplets Special"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45229/poster_image/large-a617890c5fcf3599bac9b58586bea1d5.jpeg" alt="The Duke of Death and His Maid Season 2"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-tv"><img class="tile-image" src="https://media.kitsu.io/anime/47275/poster_image/large-eb4818f7a38a5b9a6e0217e2a2a20db1.jpeg" alt="The Quintessential Quintuplets Special"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/higeki-no-genkyou-to-naru-saikyou-gedou-last-boss-joou-wa-tami-no-tame-ni-tsukushimasu"><img class="tile-image" src="https://media.kitsu.io/anime/46689/poster_image/large-a1f657530879504259f42347dba73736.jpeg" alt="The Most Heretical Last Boss Queen"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/helck"><img class="tile-image" src="https://media.kitsu.io/anime/45876/poster_image/large-40a42dcd3103f5bc0bdcda1024225653.jpeg" alt="Helck"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/rurouni-kenshin-meiji-kenkaku-romantan-2023"><img class="tile-image" src="https://media.kitsu.io/anime/45616/poster_image/large-1881293614632c347d895db0315419a7.jpeg" alt="Rurouni Kenshin"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/zom-100-zombie-ni-naru-made-ni-shitai-100-no-koto"><img class="tile-image" src="https://media.kitsu.io/anime/46954/poster_image/large-2adb6dcb745a6963b5377651868ba407.jpeg" alt="Zom 100: Bucket List of the Dead"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shiro-seijo-to-kuro-bokushi"><img class="tile-image" src="https://media.kitsu.io/anime/46187/poster_image/large-2b99e62dd47677270d0614a412b181b4.jpeg" alt="Saint Cecilia and Pastor Lawrence"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/rurouni-kenshin-meiji-kenkaku-romantan-2023"><img class="tile-image" src="https://media.kitsu.io/anime/45616/poster_image/large-1881293614632c347d895db0315419a7.jpeg" alt="Rurouni Kenshin"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/dark-gathering"><img class="tile-image" src="https://media.kitsu.io/anime/46279/poster_image/large-7f454e242f8934b587b4724d75f5e6f0.jpeg" alt="Dark Gathering"></img></a>
 						</div><!-- tiled-list -->
 						<h3 class="section-subheading">Fall 2023</h3> 
@@ -188,7 +174,7 @@
 							<a class="tile" href="https://kitsu.io/anime/sousou-no-frieren"><img class="tile-image" src="https://media.kitsu.io/anime/46474/poster_image/large-49f17889f1e1d09c09156c44bf78fb04.jpeg" alt="Frieren: Beyond Journey’s End"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dr-stone-new-world-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47246/poster_image/large-4ef83126c64c6e9c1a0d3f4bca01bbb8.jpeg" alt="Dr.STONE: NEW WORLD Part 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/undead-unluck"><img class="tile-image" src="https://media.kitsu.io/anime/46415/poster_image/large-6bde72a8c4c7b37db91b5c61a0388e09.jpeg" alt="Undead Unluck"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kusuriya-no-hitorigoto"><img class="tile-image" src="https://media.kitsu.io/anime/47083/poster_image/large-ecc660e14eb2ca67450ee07bfe43aa73.jpeg" alt="The Apothecary Diaries"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kusuriya-no-hitorigoto"><img class="tile-image" src="https://media.kitsu.io/anime/47083/poster_image/large-ada1efcd85b7180c1faafaa20531bcab.jpeg" alt="The Apothecary Diaries"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kanojo-mo-kanojo-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46486/poster_image/large-3e6b7d4f10ff65078fa84621ed59b0ee.jpeg" alt="Kanojo mo Kanojo 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/keikenzumi-na-kimi-to-keiken-zero-na-ore-ga-otsukiai-suru-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/46459/poster_image/large-5deef63ee92ae6942ea5b6c7b64d2c80.jpeg" alt="Our Dating Story"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/hametsu-no-oukoku"><img class="tile-image" src="https://media.kitsu.io/anime/47076/poster_image/large-8bbc46acd3e0902f4390b0ba01cef269.jpeg" alt="The Kingdoms of Ruin"></img></a>
@@ -268,7 +254,7 @@
 								<a class="tile" href="https://kitsu.io/anime/fate-zero"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Fate-Zero_large.jpg" alt="Fate Zero"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/one-punch-man"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/One-Punch-Man_large.jpg" alt="One-Punch Man"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/attack-on-titan"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Attack-on-Titan_large.jpg" alt="Attack on Titan"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/My-Heo_large.jpg" alt="My Hero Academia"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/mob-psycho-100"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Mob-Psycho-100_large.jpeg" alt="Mob Psycho 100"></img></a>								
 							</div>
 						</div><!--Action-->
 						<div class="tiled-list-card">
@@ -287,9 +273,6 @@
 								<a class="tile" href="https://kitsu.io/anime/space-dandy"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Space-Dandy_large.jpg" alt="Space Dandy"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Devil-is-a-Part-Timer_large.jpg" alt="The Devil is a Part-Timer!"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/hinamatsuri"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Hinamatsuri_large.jpg" alt="HINAMATSURI"></img></a>
-								<!--
-									<a class="tile" href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/10941/large.jpg?1448505014" alt="KonoSuba"></img></a>
-								-->
 							</div>	
 						</div><!--Comedy-->			
 						<div class="tiled-list-card">
@@ -343,14 +326,11 @@
 						</div><!--Fantasy-->
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Isekai</h4>
-							<div class="card-tiled-list">						
-								<a class="tile" href="https://kitsu.io/anime/no-game-no-life"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/No-Game-No-Life_large.jpg" alt="No Game, No Life"></img></a>
+							<div class="card-tiled-list">														
 								<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Mushoku-Tensei_large.jpg" alt="Mushoku Tensei"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/overlord"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/overlord_large.jpg" alt="Overlord"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/That-Time-I-Got-Reincarnated-as-a-Slime_large.jpg" alt="That Time I Got Reincarnated as a Slime"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekujou-shisho-ni-naru-tame-niwa-shudan-o-erandeiramasen"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Ascendance-of-a-Bookworm_large.jpg" alt="Ascendance of a Bookworm"></img></a>								
-								<!--									
-									<a class="tile" href="https://kitsu.io/anime/log-horizon"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Log-Horizon_large.jpg" alt="Log Horizon"></img></a>
-								-->
 							</div>
 						</div><!--Isekai-->						
 						<div class="tiled-list-card">
